# Pts_viz

./: .gitignore  README.md  custom_point_loader.py  custom_point_loader.py.example  pkl_pointcloud_viewer.py  pyproject.toml
.github/workflows/: ci.yml
examples/demo_dataset/: demo_frame_index.pkl  frame_000.npz  frame_001.npz
pkl_pointcloud_browser_viewer/: __init__.py  app.py  demo_point_loader.py  point_loader.py
pkl_pointcloud_browser_viewer/config/: viewer.local.yaml.example  viewer.yaml
scripts/: build_demo_from_local_results.py  inspect_frame_alignment.py
tests/: test_app.py  test_ui_strings.py
