[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkl-pointcloud-browser-viewer"
version = "0.1.0"
description = "Browser viewer for PKL-indexed point cloud datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI Codex"}]
dependencies = ["numpy", "PyYAML"]
keywords = ["pointcloud", "viewer", "browser", "lidar"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
pkl-pointcloud-viewer = "pkl_pointcloud_browser_viewer.app:main"

[tool.setuptools]
include-package-data = true
py-modules = ["pkl_pointcloud_viewer"]

[tool.setuptools.packages.find]
include = ["pkl_pointcloud_browser_viewer*"]

[tool.setuptools.package-data]
pkl_pointcloud_browser_viewer = [
  "config/*.yaml",
  "vendor/browser_viewer/*.js",
]
